# cardfinity

./: LICENSE  README.md  cabal.project  cardfinity.cabal  cardgame.cabal  shell.nix  test.card  test.deck
.github/workflows/: windows.yaml
app/: Atoms.hs  CardParser.hs  ExampleCards.hs  Game.hs  Main.hs  Parser.hs  Pdf.hs  Round.hs  Types.hs  Utils.hs
atoms/: AtomDisplay.hs  AtomParsers.hs  AtomScale.hs  Atoms.hs  OldAtoms.hs
cardfinity-core/: cardfinity-core.cabal
cardfinity-core/app/: Main.hs  Types.hs
cardfinity-core/atoms/: Atoms.hs
cardfinity-core/game/: AtomActions.hs  Game.hs  GameUtils.hs  Round.hs  Scale.hs  ShowCard.hs
cardfinity-core/parser/: CardParser.hs  ParserCore.hs
cardfinity-designer/: Main.hs  cardfiniter-designer.cabal
cardfinity-designer/app/: Main.hs
cardfinity-designer/assets/: style.css
cardfinity-designer/editor/: Conditions.hs  Effects.hs  Monster.hs  Shared.hs  Spell.hs
cardfinity-designer/src/: Editor.hs  Main.hs  Shared.hs  Theme.hs
cardfinity-designer/src/Editor/: Card.hs  Conditions.hs  Effects.hs  Mapping.hs  Monster.hs  Shared.hs  Spell.hs  Types.hs  Update.hs  View.hs
cardfinity-designer/src/Theme/: CssEditor.hs  cssEditor.js
docs/: ATOMS.md  RULES.md
excards/: ExampleCards.hs  FleurDeck.hs  PersonaDeck.txt  demons.dck  demons.txt
game/: AtomActions.hs  Atoms.hs  Game.hs  GameUtils.hs  Round.hs  Scale.hs
parser/: AtomParsers.hs  CardParser.hs  Parser.hs  ParserCore.hs
